--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,19 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Port=5432;Database=homeDB;Username=postgres;Password=1234"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "Kestrel": {
+    "Limits": {
+      "MaxRequestBodySize": 1500000000
+    }
+  },
+
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=homeDB;Username=postgres;Password=1234"
+  }
 }
